--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <html>
   <body>
-    <h1>lavda kiran</h2>
+    <h1>Sachin Chavan</h2>
     <p>blah blah blah blah</p>
     <p>blah blah blah blah</p>
     <p>blah blah blah blah</p>
