--- a/index.html
+++ b/index.html
@@ -2,15 +2,8 @@
 <html>
   <body>
     <h1>Sachin Chavan</h2>
-    <p>blah blah blah blah</p>
-    <p>blah blah blah blah</p>
-    <p>blah blah blah blah</p>
-    <p>blah blah blah blah</p>
-    <p>blah blah blah blah</p>
-    <p>blah blah blah blah</p>
-    <p>blah blah blah blah</p>
-    <p>blah blah blah blah</p>
-    <p>blah blah blah blah</p>
-    <p>blah blah blah blah</p>
+    <p>Kiran lala</p>
+    <p>Pratik pns</p>
+    <p>Pratik Thapa</p>
   </body>
 </html>
